--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                                                 <li><a href="item-details.html">Item Details</a></li>
                                                 <li><a href="activity.html">Activity</a></li>
                                                 <li><a href="upload.html">Upload</a></li>
-                                                <li><a href="profile-edit.html">Profile Edit</a></li>
+                                                <li><a href="profile-edit.html">Profile</a></li>
                                                 <li><a href="login.html">Login</a></li>
                                                 <li><a href="register.html">Register</a></li>
-                                                <li><a href="404.html">404</a></li>
-                                                <li><a href="coming-soon.html">Coming Soon</a></li>
+                                                <li><a href="404.html">4</a></li>
+                                                <li><a href="coming-soon.html">Comin</a></li>
                                             </ul>
                                         </li>
                                         <li>
