--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                                 <li><a href="collection.html">Collection</a></li>
                                                 <li><a href="item-details.html">Item Details</a></li>
                                                 <li><a href="activity.html">Activity</a></li>
-                                                <li><a href="upload.html">Upload</a></li>
+                                                <li><a href="upload.html">Uploa</a></li>
                                                 <li><a href="profile-edit.html">Profile</a></li>
                                                 <li><a href="login.html">Login</a></li>
                                                 <li><a href="register.html">Register</a></li>
