--- a/index.html
+++ b/index.html
@@ -1197,6 +1197,7 @@
                     </div>
                     <!-- End Single Product -->
                 </div>
+                </div>
                 <section class="pt-120 pb-90">
                     <div class="container">
                         <div class="row justify-content-center">
