--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
     <!-- End Live Auction -->
 
     <!-- Explore Feeds -->
-    <section class="pt-120 pb-120">
+    <section class="pt-120">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
