--- a/index.html
+++ b/index.html
@@ -1463,9 +1463,9 @@
                     <div class="col-12">
                         <!-- CopyRight Content -->
                         <div class="copyright-content text-center text-white">
-                            © 2018 - <span class="currentYear">2022</span> <a href="https://www.themelooks.com/"
-                                class="text-white">Themelooks</a>
-                            Networks, Inc. All Right Reserved.
+                            © 2022 - <span class="currentYea">2023</span> <a href="https://www.themelooks.com/"
+                                class="text-white">Auroralpu</a>
+                            . All Right Reserved.
                         </div>
                         <!-- End CopyRight Content -->
                     </div>
