--- a/index.html
+++ b/index.html
@@ -78,22 +78,13 @@
                                 <!-- Start Logo -->
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo.svg" class="main-logo" alt="">
-                                        <img src="assets/img/sticky-logo.svg" class="sticky-logo" alt="">
+                                        <img src="assets/img/logowhite.png" class="main-logo" alt="" width="200" height="200">
+                                        <img src="assets/img/logoblack.png" class="sticky-logo" alt="" width="200" height="200">
                                     </a>
                                 </div>
                                 <!-- End of Logo -->
-
                                 <!-- Search Form -->
-                                <form class="search-form d-none d-sm-block ms-4" action="#">
-                                    <div class="form-group">
-                                        <button type="submit">
-                                            <img src="assets/img/icons/search.svg" class="svg" alt="">
-                                        </button>
-
-                                        <input type="text" class="form-control mb-0" placeholder="Search item…">
-                                    </div>
-                                </form>
+                                <!-- no search needed -->
                                 <!-- End Search Form -->
                             </div>
                         </div>
@@ -107,44 +98,21 @@
                                         <li class="current-menu-parent">
                                             <a href="#">Home</a>
                                             <ul class="sub-menu">
-                                                <li class="current-menu-children"><a href="index.html">Home V1</a></li>
-                                                <li><a href="home-v2.html">Home V2</a></li>
-                                                <li><a href="home-v3.html">Home V3</a></li>
-                                                <li><a href="home-v4.html">Home V4</a></li>
-                                                <li><a href="home-v5.html">Home V5</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="#">Explore</a>
                                             <ul class="sub-menu">
-                                                <li><a href="explore.html">Explore</a></li>
-                                                <li><a href="profile.html">Profile</a></li>
-                                                <li><a href="create.html">Create</a></li>
-                                                <li><a href="wallet.html">Wallet</a></li>
-                                                <li><a href="help-center.html">Help Center</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="#">Pages</a>
                                             <ul class="sub-menu">
-                                                <li><a href="author.html">Author</a></li>
-                                                <li><a href="ranking.html">ranking</a></li>
-                                                <li><a href="collection.html">Collection</a></li>
-                                                <li><a href="item-details.html">Item Details</a></li>
-                                                <li><a href="activity.html">Activity</a></li>
-                                                <li><a href="upload.html">Uploa</a></li>
-                                                <li><a href="profile-edit.html">Profile</a></li>
-                                                <li><a href="login.html">Login</a></li>
-                                                <li><a href="register.html">Register</a></li>
-                                                <li><a href="404.html">4</a></li>
-                                                <li><a href="coming-soon.html">Comin</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="#">Blog</a>
                                             <ul class="sub-menu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="blog-details.html">Blog Details</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
@@ -155,7 +123,7 @@
                                 <div class="d-none d-md-flex align-items-center ms-4">
                                     <a href="create.html" class="btn">
                                         <img src="assets/img/icons/create-icon.svg" alt="" class="svg">
-                                        Create
+                                        Register
                                     </a>
 
                                     <div class="dropdown ml-10">
@@ -1247,7 +1215,7 @@
                                                     </h3>
                                                     <div class="happen-details">
                                                         <div class="happen-img">
-                                                            <img src="/GitHub/codefest2.0/assets/img/speakers/h2.jpg"
+                                                            <img src="/codefest2.0/assets/img/speakers/h2.png"
                                                                 alt="" />
                                                         </div>
                                                         <div class="happen-text">
