changed some stuff

--- a/register.html
+++ b/register.html
@@ -66,22 +66,13 @@
                                 <!-- Start Logo -->
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo.svg" class="main-logo" alt="">
-                                        <img src="assets/img/sticky-logo.svg" class="sticky-logo" alt="">
+                                        <img src="assets/img/logowhite.png" class="main-logo" alt="" width="200" height="200">
+                                        <img src="assets/img/logoblack.png" class="sticky-logo" alt="" width="200" height="200">
                                     </a>
                                 </div>
                                 <!-- End of Logo -->
 
                                 <!-- Search Form -->
-                                <form class="search-form d-none d-sm-block ms-4" action="#">
-                                    <div class="form-group">
-                                        <button type="submit">
-                                            <img src="assets/img/icons/search-gradient.svg" class="svg" alt="">
-                                        </button>
-
-                                        <input type="text" class="form-control mb-0" placeholder="Search item…">
-                                    </div>
-                                </form>
                                 <!-- End Search Form -->
                             </div>
                         </div>
@@ -95,49 +86,21 @@
                                         <li>
                                             <a href="#">Home</a>
                                             <ul class="sub-menu">
-                                                <li><a href="index.html">Home V1</a></li>
-                                                <li><a href="home-v2.html">Home V2</a></li>
-                                                <li><a href="home-v3.html">Home V3</a>
-                                                </li>
-                                                <li><a href="home-v4.html">Home V4</a>
-                                                </li>
-                                                <li><a href="home-v5.html">Home V5</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="#">Explore</a>
                                             <ul class="sub-menu">
-                                                <li><a href="explore.html">Explore</a>
-                                                </li>
-                                                <li><a href="profile.html">Profile</a>
-                                                </li>
-                                                <li><a href="create.html">Create</a></li>
-                                                <li><a href="wallet.html">Wallet</a></li>
-                                                <li><a href="help-center.html">Help Center</a></li>
                                             </ul>
                                         </li>
                                         <li class="current-menu-parent">
                                             <a href="#">Pages</a>
                                             <ul class="sub-menu">
-                                                <li><a href="author.html">Author</a></li>
-                                                <li><a href="ranking.html">ranking</a></li>
-                                                <li><a href="collection.html">Collection</a></li>
-                                                <li><a href="item-details.html">Item Details</a></li>
-                                                <li><a href="activity.html">Activity</a></li>
-                                                <li><a href="upload.html">Upload</a></li>
-                                                <li><a href="profile-edit.html">Profile Edit</a></li>
-                                                <li><a href="login.html">Login</a></li>
-                                                <li class="current-menu-children"><a href="register.html">Register</a>
-                                                </li>
-                                                <li><a href="404.html">404</a></li>
-                                                <li><a href="coming-soon.html">Coming Soon</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="#">Blog</a>
                                             <ul class="sub-menu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="blog-details.html">Blog Details</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
@@ -185,15 +148,15 @@
 
     <!-- Register -->
     <div class="py-5 d-flex align-items-center" style="min-height: calc(100vh - 100px);"
-        data-bg-img="assets/img/bg/page-bg2.png">
+        data-bg-img="/Applications/XAMPP/xamppfiles/htdocs/GitHub/codefest2.0/assets/img/bg/banner-bg.png">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-10">
                     <!-- Card -->
-                    <div class="card login-register-card">
+                    <div class="card login-register-card registration-card">
                         <div class="card-body">
                             <div class="text-center mb-5">
-                                <h2>Register For Codefest 2.0</h2>
+                                <h2>Register For Codefest 2022</h2>
                                 <p>Already account yet? <a href="login.html" class="c1">Login Now!</a></p>
                             </div>
 
@@ -202,7 +165,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="display_name" class="mb-2">Display name</label>
+                                            <label for="display_name" class="mb-2">Name</label>
                                             <input type="text" id="display_name" class="form-control"
                                                 placeholder="e.g@alex_anefty">
                                         </div>
@@ -225,14 +188,14 @@
                                         <div class="form-group">
                                             <label for="phone_num" class="mb-2">Phone Number</label>
                                             <input type="tel" id="phone_num" class="form-control"
-                                                placeholder="+01 776-542154">
+                                                placeholder="+91 776-542-154">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="password" class="mb-2">Password</label>
-                                            <input type="password" id="password" class="form-control"
-                                                placeholder="*** **** *** ****">
+                                            <label for="password" class="mb-2">Registration Number</label>
+                                            <input type="number" id="number" class="form-control" minlength="8" maxlength="8"
+                                                placeholder="********">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
