--- a/register.html
+++ b/register.html
@@ -155,9 +155,8 @@
                     <!-- Card -->
                     <div class="card login-register-card registration-card">
                         <div class="card-body">
-                            <div class="text-center mb-5">
-                                <h2>Register For Codefest 2022</h2>
-                                <p>Already account yet? <a href="login.html" class="c1">Login Now!</a></p>
+                            <div class="text-center mb-5 screen-name">
+                                <h2>Register For </h2><h2 class="c1">Codefest 2022</h2>
                             </div>
 
                             <!-- Register Form -->
@@ -166,47 +165,47 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="display_name" class="mb-2">Name</label>
-                                            <input type="text" id="display_name" class="form-control"
+                                            <input type="text" id="display_name" class="form-control input-inset"
                                                 placeholder="e.g@alex_anefty">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="email" class="mb-2">Email Address</label>
-                                            <input type="email" id="email" class="form-control"
+                                            <input type="email" id="email" class="form-control input-inset"
                                                 placeholder="anefty@gmail.com">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="username" class="mb-2">Username</label>
-                                            <input type="text" id="username" class="form-control"
-                                                placeholder="e.g@alex_anefty">
+                                            <label for="Registration_Number" class="mb-2">Registration Number</label>
+                                            <input type="tel" id="Registration_Number" class="form-control input-inset" minlength="8" maxlength="8"
+                                                placeholder="12345678">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="phone_num" class="mb-2">Phone Number</label>
-                                            <input type="tel" id="phone_num" class="form-control"
-                                                placeholder="+91 776-542-154">
+                                            <input type="tel" id="phone_num" class="form-control input-inset"
+                                                placeholder="+91 776-542-154" maxlength="10" minlength="10">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="password" class="mb-2">Registration Number</label>
-                                            <input type="number" id="number" class="form-control" minlength="8" maxlength="8"
-                                                placeholder="********">
+                                            <label for="whatsapp_num" class="mb-2">Whatsapp Number</label>
+                                            <input type="tel" id="whatsapp_num" class="form-control input-inset" 
+                                                placeholder="+91 776-542-154" maxlength="10" minlength="10">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="re-password" class="mb-2">Re-enter Password</label>
-                                            <input type="password" id="re-password" class="form-control"
-                                                placeholder="*** **** *** ****">
+                                            <label for="referred_by" class="mb-2">Referred By</label>
+                                            <input type="text" id="referred_by" class="form-control input-inset"
+                                                placeholder="Akshath">
                                         </div>
                                     </div>
-                                    <div class="col-12 pt-2">
-                                        <button type="submit" class="btn"><img src="assets/img/icons/btn-login.svg"
+                                    <div class="col-12 pt-2 btn-pay">
+                                        <button type="submit" class="btn btn-pay-size"><img src="assets/img/icons/btn-login.svg"
                                                 alt="" class="svg"> Pay Now</button>
                                     </div>
                                 </div>
