--- a/register.html
+++ b/register.html
@@ -84,57 +84,28 @@
                                     <!-- Nav -->
                                     <ul class="nav">
                                         <li>
-                                            <a href="#">Home</a>
+                                            <a href="index.html">Home</a>
+                                            <div class="sub-menu">
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a href="#">About</a>
+                                            <div class="sub-menu">
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a href="#">Pricing</a>
                                             <ul class="sub-menu">
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="#">Explore</a>
-                                            <ul class="sub-menu">
-                                            </ul>
+                                            <a href="#">Contact</a>
+                                            <div class="sub-menu">
+                                            </div>
                                         </li>
-                                        <li class="current-menu-parent">
-                                            <a href="#">Pages</a>
-                                            <ul class="sub-menu">
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Blog</a>
-                                            <ul class="sub-menu">
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li class="current-menu-parent"><a href="#">Register</a></li>
                                     </ul>
                                     <!-- End Nav -->
-                                </div>
-
-                                <div class="d-flex align-items-center">
-                                    <div class="dropdown ms-3">
-                                        <a href="#" class="user-avatar dropdown-toggle" data-bs-toggle="dropdown">
-                                            <img src="assets/img/media/user.png" alt="">
-                                            <span class="user-status">
-                                                <img src="assets/img/icons/check.svg" class="svg" alt="">
-                                            </span>
-                                        </a>
-
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="profile.html"><img
-                                                        src="assets/img/icons/profile.svg" alt="">
-                                                    Profile</a></li>
-                                            <li><a class="dropdown-item" href="create.html"><img
-                                                        src="assets/img/icons/create.svg" alt=""> Create</a>
-                                            </li>
-                                            <li><a class="dropdown-item" href="collection.html"><img
-                                                        src="assets/img/icons/collection.svg" alt="">
-                                                    Collection</a></li>
-                                            <li><a class="dropdown-item" href="wallet.html"><img
-                                                        src="assets/img/icons/wallet.svg" alt=""> Wallet</a>
-                                            </li>
-                                            <li><a class="dropdown-item" href="explore.html"><img
-                                                        src="assets/img/icons/explore.svg" alt="">
-                                                    Explore</a></li>
-                                        </ul>
-                                    </div>
                                 </div>
                             </div>
                         </div>
