--- a/activity.html
+++ b/activity.html
@@ -306,7 +306,7 @@
                                     <td>
                                         <span>offered 0.002 ETH by: <span>Franklin Greer</span></span>
                                     </td>
-                                    <td><span>16 September, 2021. 8:26 AM</span></td>
+                                    <td><span>20 October, 2023.</span></td>
                                     <td>
                                         <button class="btn-circle style--three">
                                             <img src="assets/img/icons/activity-icon4.svg" alt="" class="svg">
