--- a/author.html
+++ b/author.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Page Title -->
-    <title>Anefty || NFT Marketplace HTML5 Template</title>
+    <title>Anefty || NFT Marketplace</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
